--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,11 @@
 {
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
     "editor.codeActionsOnSave": {
         "source.fixAll.ruff": true,
         "source.organizeImports.ruff": true
     },
-    "python.linting.enabled": true,
-    "python.formatting.provider": "black",
     "python.testing.pytestEnabled": true,
-    "python.linting.flake8Enabled": false,
-    "python.linting.mypyEnabled": false,
-    "python.linting.ignorePatterns": [
-        "**/site-packages/**/*.py",
-        ".vscode/*.py",
-    ],
     "python.analysis.importFormat": "relative",
 }
