--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
         with:
           python-version: ${{ matrix.version }}
 
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Install rye
         run: |
           curl -sSf https://rye-up.com/get | RYE_INSTALL_OPTION="--yes" bash
